--- a/DemoLibrary/DemoLibrary.csproj
+++ b/DemoLibrary/DemoLibrary.csproj
@@ -40,10 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseEmployee.cs" />
     <Compile Include="CEO.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="IEmployee.cs" />
+    <Compile Include="IManaged.cs" />
+    <Compile Include="IManager.cs" />
     <Compile Include="Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
